# rust-on-android-template

./: .gitignore  README.md
android/app/src/main/java/com/example/android/: MainActivity.java  RustUtils.java
android/app/src/main/res/layout/: activity_main.xml
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  Makefile
rust/.cargo/: config
rust/scripts/: config
rust/src/: lib.rs
